--- a/RedRiverTechnicalTest/RedRiverTechnicalTest.csproj
+++ b/RedRiverTechnicalTest/RedRiverTechnicalTest.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.4.10" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\RedRiverTechnicalTest.Domain\RedRiverTechnicalTest.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
